Fixed the overflow error

--- a/main.css
+++ b/main.css
@@ -4,7 +4,6 @@
   width: 74rem;
   height: 29rem;
   box-shadow: 0 2px 30px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
   display: grid;
   grid-auto-flow: column;
   grid-template-columns: 42% 1fr;
@@ -20,6 +19,7 @@
 .container__image {
   width: 100%;
   height: 100%;
+  border-radius: 8px;
 }
 .container__description {
   padding: 2.5rem 4rem;
